# clara-backend

./: .gitignore  PART1_SCHEMA_DESIGN.md  PART3_ARCHITECTURE_ANSWERS.md  README.md  SUBMISSION_OVERVIEW.md  clara_schema_diagram.html  pyproject.toml  requirements.txt  test_apis.py  test_auth_workflow.py  test_full_auth.py  test_workflow.py
analytics/: models.py
analytics/migrations/: 0001_initial.py
claims/: admin.py  exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
claims/migrations/: 0001_initial.py
config/: settings.py  urls.py
healthcare/: __init__.py  admin.py  apps.py  auth_models.py  auth_serializers.py  auth_urls.py  auth_views.py  exceptions.py  middleware.py  models.py  permissions.py  settings.py  urls.py
healthcare/migrations/: 0001_initial.py
members/: apps.py  models.py
members/migrations/: 0001_initial.py
providers/: apps.py  models.py
providers/migrations/: 0001_initial.py
